tests/integration/errors/unexpected_character.rsg
// TEST: compile_error
// EXPECT-ERROR: unexpected character '$'

fn main() {
    x := $invalid
}
